--- a/style.css
+++ b/style.css
@@ -653,6 +653,21 @@ span{
     
     
 }
+
+
+a:link { 
+    text-decoration: none; 
+  } 
+  a:visited { 
+    text-decoration: none; 
+  } 
+  a:hover { 
+    text-decoration: none; 
+  } 
+  a:active { 
+    text-decoration: none; 
+  }
+
 /*@media(max-width:895px)
 {
      #menu-icon{
